# TND004

./: README.md
Lab1/code/: CMakeLists.txt  lab1.cpp
Lab2/code/: CMakeLists.txt  lab2.cpp  set.cpp  set.h
Lab3/code/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Lab3/code/data/: against-each-other.txt  billiards10.txt  diffusion.txt
Lab3/code/include/particlesystem/: collisionsystem.h  event.h  particle.h  priorityqueue.h
Lab3/code/include/rendering/: window.h
Lab3/code/src/: lab3.cpp
Lab3/code/src/particlesystem/: collisionsystem.cpp  event.cpp  particle.cpp
Lab3/code/src/rendering/: window.cpp
Lab4/code/: CMakeLists.txt  heap.h
Lab4/code/code4a/: digraph.cpp  digraph.h  edge.h  main.cpp
Lab4/code/code4b/: dsets.cpp  edge.h  graph.cpp  main.cpp
